kfreebsd-11 (11.0~svn259528-3) UNRELEASED; urgency=low

  * Only assert linker.hints presence on kfreebsd-any.

 -- Robert Millan <rmh@debian.org>  Fri, 27 Dec 2013 14:23:10 +0100

kfreebsd-11 (11.0~svn259528-2) experimental; urgency=low

  * Drop one more round of srcdir copying.
  * Switch default console to Newcons.

 -- Robert Millan <rmh@debian.org>  Thu, 19 Dec 2013 12:20:51 +0100

kfreebsd-11 (11.0~svn259528-1) experimental; urgency=low

  * New upstream snapshot.
    - Refresh all patches.

  [ Robert Millan ]
  * Implement a watchdog to detect when upstream switches to a new Clang
    version.
  * Disable pty(4) to follow upstream.
  * Build with CTF debug information, and enable KDTRACE_HOOKS (DTrace
    hooks) and DDB_CTF (CTF support in ELF loader) for debug builds.
    (Closes: #689916)
  * Fetch source code securely (https) in get-orig-source.
  * Remove the kludges that modify srcdir in build target. Use override
    variables instead when possible. This will allow sharing the srcdir
    later.
  * Build and install linker.hints. (Closes: #684595)

 -- Robert Millan <rmh@debian.org>  Wed, 18 Dec 2013 12:19:58 +0100

kfreebsd-11 (11.0~svn258494-1) experimental; urgency=low

  * New upstream snapshot.
    - Refresh all patches.
    - Upstream moved aicasm off the kernel build process. Follow them and
      aicasm from freebsd-buildutils (>= 10~svn258496-1~).
    - r258281: Fix siginfo_t.si_status for wait6/waitid/SIGCHLD.
      (Closes: #729698)

  [ Robert Millan ]
  * Remove (disabled) patch 006_mips_i8259_alloc.diff. Problem has been
    fixed in upstream already.
  * Move modules to /boot/modules, as discussed in
    https://lists.debian.org/debian-bsd/2013/09/msg00003.html
  * Disable mipsel builds.  (Closes: #727829)

  [ Guillem Jover ]
  * Remove myself from Uploaders.

 -- Robert Millan <rmh@debian.org>  Sat, 23 Nov 2013 13:24:23 +0100

kfreebsd-11 (11.0~svn256281-1) experimental; urgency=low

  * New upstream snapshot.